Fixed mail icon not showing up, and added styling to recolor it according to the theme.

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -334,6 +334,14 @@ img.favicon {
   margin-bottom: -0.07em;
   margin-top: -20%;
   mix-blend-mode: normal !important;
+
+  &[src$="mail.svg"] {
+    // Computed to match var(--dark) using https://codepen.io/sosuke/pen/Pjoqqp
+    filter: invert(30%) sepia(13%) saturate(1034%) hue-rotate(196deg) brightness(90%) contrast(84%);
+    :root[saved-theme="dark"] & {
+      filter: invert(83%) sepia(9%) saturate(802%) hue-rotate(191deg) brightness(98%) contrast(96%);
+    }
+  }
 }
 
 .book-citation {
